[package]
name = "weather-prediction-quality"
version = "0.1.0"
authors = ["Joren Van Onder <joren@jvo.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10", features = ["blocking"] }